# rust-jvm

./: Cargo.toml
src/: class.rs  consts.rs  descriptor.rs  frame.rs  instructions.rs  lib.rs  parser.rs  runtime.rs  structs.rs
src/class/: parser.rs  structs.rs
src/class/structs/: constant_pool.rs  java_str.rs
src/runtime/: class_loader.rs  famous_classes.rs  heap.rs  inheritance.rs  interpreter.rs  native.rs  structs.rs
src/runtime/class_loader/: bootstrap.rs
src/runtime/heap/: reflection.rs  string_table.rs
src/runtime/interpreter/: frame.rs  global.rs  instructions.rs
src/runtime/native/: class.rs  double.rs  float.rs  internal_misc_cds.rs  object.rs  string.rs  system.rs
src/runtime/structs/: attributes.rs  constant_pool.rs  object.rs  string_table.rs
src/structs/: attributes.rs  constant_pool.rs
