[package]
name = "jvm"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "8.0.0"
bitflags = "2.9.1"
paste = "1.0.11"
dashmap = "6.1.0"
zip = "4.0.0"
cesu8-str = "1.2.1"
once_cell = "1.21.3"
parking_lot = "0.12.4"